feature(calendar) : 1. 캘린더에 회원 기능 추가 2. CSRF 토큰 추가