@@ -12,47 +12,36 @@ import est.secretary.domain.Schedule;
 import est.secretary.dto.ScheduleCountResponse;
 import est.secretary.dto.ScheduleRequest;
 import est.secretary.dto.ScheduleResponse;
-import est.secretary.repository.MemberRepository;
 import est.secretary.repository.ScheduleRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+
+import est.secretary.domain.Member;
 
 @RequiredArgsConstructor
 @Service
 public class ScheduleService {
 
 	private final ScheduleRepository scheduleRepository;
-	private final MemberRepository memberRepository;
 
-	public List<ScheduleResponse> getAllSchedules() {
-		return scheduleRepository.findAll().stream()
-			.map(ScheduleResponse::new)
-			.toList();
-	}
-
-	public ScheduleResponse getScheduleById(Long id) {
-		Schedule schedule = scheduleRepository.findById(id)
-			.orElseThrow(() -> new RuntimeException("Schedule not found"));
-
-		return new ScheduleResponse(schedule);
-	}
-
-	public void saveSchedule(ScheduleRequest request) {
+	@Transactional
+	public void saveSchedule(ScheduleRequest request, Member member) {
 		Schedule schedule = Schedule.builder()
 			.title(request.getTitle())
 			.content(request.getContent())
 			.start(request.getStart())
 			.end(request.getEnd())
 			.location(request.getLocation())
+			.member(member)
 			.build();
-
 		scheduleRepository.save(schedule);
 	}
 
 	@Transactional
-	public void updateSchedule(Long id, ScheduleRequest request) {
+	public void updateSchedule(Long id, ScheduleRequest request, Member member) {
 		Schedule schedule = scheduleRepository.findById(id)
-			.orElseThrow(() -> new RuntimeException("Schedule not found"));
+			.filter(s -> s.getMember().getId().equals(member.getId()))
+			.orElseThrow(() -> new RuntimeException("해당 사용자의 일정이 존재하지 않습니다."));
 
 		schedule.update(
 			request.getTitle(),
@@ -63,36 +52,42 @@ public class ScheduleService {
 		);
 	}
 
-	public void deleteSchedule(Long id) {
-		scheduleRepository.deleteById(id);
+	@Transactional
+	public void deleteSchedule(Long id, Member member) {
+		Schedule schedule = scheduleRepository.findById(id)
+			.filter(s -> s.getMember().getId().equals(member.getId()))
+			.orElseThrow(() -> new RuntimeException("해당 사용자의 일정이 존재하지 않습니다."));
+
+		scheduleRepository.delete(schedule);
 	}
 
 	// 날짜 범위 조회
-	public List<ScheduleResponse> getSchedulesBetween(LocalDateTime start, LocalDateTime end) {
-		return scheduleRepository.findByStartBetween(start, end).stream()
+	public List<ScheduleResponse> getSchedulesBetween(LocalDateTime start, LocalDateTime end, Member member) {
+		return scheduleRepository.findByMemberAndStartBetween(member, start, end).stream()
 			.map(ScheduleResponse::new)
 			.toList();
 	}
 
 	// 특정 일자 조회
-	public List<ScheduleResponse> getSchedulesByDate(LocalDate date) {
+	public List<ScheduleResponse> getSchedulesByDate(LocalDate date, Member member) {
 		LocalDateTime start = date.atStartOfDay();
 		LocalDateTime end = date.atTime(LocalTime.MAX);
-		return getSchedulesBetween(start, end);
+		return getSchedulesBetween(start, end, member);
 	}
 
 	// 날짜별 일정
-	public List<ScheduleCountResponse> getScheduleCountsByDay(LocalDate start, LocalDate end) {
+	public List<ScheduleCountResponse> getScheduleCountsByDay(LocalDate start, LocalDate end, Member member) {
 		List<LocalDate> dates = start.datesUntil(end.plusDays(1)).collect(Collectors.toList());
 
 		return dates.stream()
 			.map(date -> {
 				LocalDateTime dayStart = date.atStartOfDay();
 				LocalDateTime dayEnd = date.atTime(LocalTime.MAX);
-				int cnt = scheduleRepository.countByDateRange(dayStart, dayEnd);
-				return new ScheduleCountResponse(date, cnt);
+				int count = scheduleRepository.countByMemberAndDateRange(member, dayStart, dayEnd);
+				return new ScheduleCountResponse(date, count);
 			})
 			.filter(resp -> resp.getCount() > 0)
-			.collect(Collectors.toList());
+			.toList();
 	}
+
 }
